# tesseract-positional

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml
examples/: example.ipynb  lorem_ipsum.tiff  lorem_ipsum_positional.txt
tesseract_positional/: __init__.py  cmd_line.py  positional_ocr.py
