[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tesseract_positional"
version = "0.1.2"
authors = [
    { name="Travis Kessler", email="travis.j.kessler@gmail.com" },
]
description = "Tool to save positional OCR data to a text file"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytesseract==0.3.10",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
tesseract-positional = "tesseract_positional.cmd_line:main"

[project.urls]
"Homepage" = "https://github.com/tjkessler/tesseract-positional"
"Bug Tracker" = "https://github.com/tjkessler/tesseract-positional/issues"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]